# FastAPI_project

./: Dockerfile  alembic.ini  config.py  database.db  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 37ce73b20ab8_initial.py  4386226c8630_initial_migration.py  66c20e8ccb30_initial_migration.py  e4bee51c2cfe_initial_migration.py  f3d1a8bbdbc9_updatñe.py  f5a02a1f0f3f_initial.py  fd39c785ecbf_initial.py
src/: config.py  logging_config.py  main.py
src/application/use_cases/: file_use_case.py
src/application/use_cases/auth/: login.py  refresh.py
src/application/use_cases/category/: create_category.py  delete_category.py  get_category.py  get_list_categories.py  update_category.py
src/application/use_cases/comment/: create_comment.py  delete_comment.py  get_comment.py  get_list_comments.py  update_comment.py
src/application/use_cases/location/: create_location.py  delete_location.py  get_list_location.py  get_location.py  update_location.py
src/application/use_cases/post/: create_post.py  delete_post.py  get_list_post.py  get_post.py  update_post.py
src/application/use_cases/user/: change_user_role.py  create_user.py  delete_user.py  get_list_user.py  get_user.py  update_user.py
src/auth/: security.py
src/core/: config.py  logging_config.py
src/exceptions/: category.py  comment.py  database.py  location.py  post.py  user.py
src/infrastructure/postgres/: database.py
src/infrastructure/postgres/models/: __init__.py  category_m.py  comment_m.py  file.py  location_m.py  mixin_m.py  post_m.py  user_m.py
src/infrastructure/postgres/repositories/: category_rep.py  comment_rep.py  file_rep.py  location_rep.py  post_rep.py  (+1 more)
src/infrastructure/sqlite/: database.py
src/models/: __init__.py  category_m.py  comment_m.py  location_m.py  mixin_m.py  post_m.py  user_m.py
src/presentation/dependencies/: auth_dep.py  category_dep.py  comment_dep.py  location_dep.py  post_dep.py  user_dep.py
src/presentation/routers/: auth_r.py  category_r.py  comment_r.py  location_r.py  post_r.py  user_r.py
src/presentation/schemas/: category_s.py  file.py  post_s.py
src/presentation/widdleware/: log_middleware.py
src/repositories/: category_rep.py  comment_rep.py  location_rep.py  post_rep.py  user_rep.py
src/routers/: auth_r.py  category_r.py  comment_r.py  location_r.py  post_r.py  user_r.py
src/routers/dependencies/: auth_dep.py  category_dep.py  comment_dep.py  location_dep.py  post_dep.py  user_dep.py
src/schemas/: category_s.py  comment_s.py  file.py  location_s.py  post_s.py  token.py  user_s.py
src/schems/: category_s.py  comment_s.py  location_s.py  post_s.py  user_s.py
src/scripts/: create_super_admin.py
src/use_cases/: file_use_case.py
src/use_cases/auth/: login.py  refresh.py
src/use_cases/category/: create_category.py  delete_category.py  get_category.py  get_list_categories.py  update_category.py
src/use_cases/comment/: create_comment.py  delete_comment.py  get_comment.py  get_list_comments.py  update_comment.py
src/use_cases/location/: create_location.py  delete_location.py  get_list_location.py  get_location.py  update_location.py
src/use_cases/post/: create_post.py  delete_post.py  get_list_post.py  get_post.py  update_post.py
src/use_cases/user/: change_user_role.py  create_user.py  delete_user.py  get_list_user.py  get_user.py  update_user.py
src/widdleware/: log_middleware.py
(+6 files in other folders)
