[project]
name = "fastapi-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Gvozdarev Kirill",email = "gvozdarevkirill@email.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "pydantic[email] (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)"
]

[tool.poetry]
packages = [{include = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.13,<0.16.0)"
]

[tool.ruff]
line-length = 80  # Максимальная длина строки
target-version = "py314"  # Твоя версия Python
fix = true  # Автоисправление при --fix
unsafe-fixes = false  # Не применять небезопасные фиксы автоматически

# Исключить папки
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "alembic/versions",
    ".pytest_cache",
]

[tool.ruff.lint]
# Включить правила (E, F — базовые из Flake8, I — isort, B — bugbear, UP — pyupgrade)
select = ["E", "F", "I", "B", "UP", "S", "RUF"]
ignore = [
    "E501",  # Длина строки (Ruff format уже контролирует)
]

[tool.ruff.format]
quote-style = "double"  # Двойные кавычки
indent-style = "space"  # Отступы пробелами